涉及模块：并发编程-基础篇 提交说明：Java对象头解析

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1293,7 +1293,7 @@ if(hashTable.get("key") == null) {
 
 String、Integer都是不可变类，其内部的状态都是不可变的，因此其方法都是线程安全的
 
-#### 习题
+#### 4.5习题
 
 ##### 买票练习
 
@@ -1437,6 +1437,76 @@ class Account {
     }
 }
 ```
+
+#### 4.6 Monitor概念
+
+##### Java对象头
+
+*以32位虚拟机为例*
+
+1. 普通对象
+
+   ```java
+   |--------------------------------------------------------------|
+   | Object Header (64 bits)                                      |
+   |------------------------------------|-------------------------|
+   | Mark Word (32 bits)                | Klass Word (32 bits)    |
+   |------------------------------------|-------------------------|
+   ```
+
+2. 数组对象
+
+   ```java
+   |---------------------------------------------------------------------------------|
+   |                                Object Header (96 bits)                          |
+   |--------------------------------|-----------------------|------------------------|
+   |              Mark Word(32bits) | Klass Word(32bits)    | array length(32bits)   |
+   |--------------------------------|-----------------------|------------------------|
+   ```
+
+3. 其中mark work结构如为
+
+   ```java
+   |-------------------------------------------------------|--------------------|
+   |                  Mark Word (32 bits)                  |      State         |
+   |-------------------------------------------------------|--------------------|
+   | hashcode:25 | age:4 | biased_lock:0         | 01      |      Normal        |
+   |-------------------------------------------------------|--------------------|
+   | thread:23 | epoch:2 | age:4 | biased_lock:1 | 01      |      Biased        |
+   |-------------------------------------------------------|--------------------|
+   | ptr_to_lock_record:30                       | 00      | Lightweight Locked |
+   |-------------------------------------------------------|--------------------|
+   | ptr_to_heavyweight_monitor:30               | 10      | Heavyweight Locked |
+   |-------------------------------------------------------|--------------------|
+   |                                             | 11      |  Marked for GC      |
+   |-------------------------------------------------------|--------------------|
+   ```
+
+*64 位虚拟机 Mark Word*
+
+```java
+|--------------------------------------------------------------------|--------------------|
+| Mark Word (64 bits)                                                | State              |  
+|--------------------------------------------------------------------|--------------------|
+| unused:25 | hashcode:31 | unused:1 | age:4 | biased_lock:0 | 01    | Normal             |
+|--------------------------------------------------------------------|--------------------|
+| thread:54 | epoch:2 | unused:1 | age:4 | biased_lock:1     | 01    | Biased             |
+|--------------------------------------------------------------------|--------------------|
+| ptr_to_lock_record:62                                      | 00    | Lightweight Locked |
+|--------------------------------------------------------------------|--------------------|
+| ptr_to_heavyweight_monitor:62                              | 10    | Heavyweight Locked |
+|--------------------------------------------------------------------|--------------------|
+|                                                            | 11    | Marked for GC      |
+|--------------------------------------------------------------------|--------------------|
+```
+
+
+
+##### Monitor
+
+##### 原理之synchronized
+
+##### 原理之synchronized进阶
 
 
 
