涉及模块：并发编程-基础篇 提交说明：Monitor（锁）分析

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1500,9 +1500,26 @@ class Account {
 |--------------------------------------------------------------------|--------------------|
 ```
 
+##### Monitor（锁）
 
+Monitor被称之为**监视器**或者**管程**，每个java对象都可以关联一个 monitor对象，如果使用synchronized给对象上锁（**重量级锁**）之后，
 
-##### Monitor
+该对象头中的mark word就被设置为指向**monitor对象的指针**
+
+**monitor结构如下**
+
+<img src="D:\KUHAN Project\notes\doc\Java并发编程\imgs\monitor结构.png" alt="monitor结构" style="zoom:60%;" />
+
+1. 刚开始monitor对象中的owner为null
+2. 当thread2执行到synchronized(obj) 时，就会将monitor的owner设置为thread2（每一个monitor只能一个owner）
+3. 当thread2在持有锁的过程中，如果thread3、thread4、thread5也来执行synchronized(obj)，就会进入EntryList阻塞队列中，处于BLOCKED阻塞状态
+4. thread2执行完临界区中的代码完之后，开始唤醒EntryList阻塞队列中的线程来竞争锁，这个时候锁的竞争不一定是公平的（先进入阻塞队列中的线程不一定可以先竞争到锁）
+5. 图中WaitSet集合中的thread0、thread1是之前获得过锁，但是条件不满足进入WAITING状态的线程，在后面的wait-notify章节中会讲到
+
+**注意**
+
+1. synchronized必须是进入同一个对象的monitor才会有上述效果
+2. 不加synchronized的对象不会关联monitor监视器，不会有上述效果
 
 ##### 原理之synchronized
 
