涉及模块：并发编程-基础篇 提交说明：Monitor锁影响程序性能

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1500,11 +1500,11 @@ class Account {
 |--------------------------------------------------------------------|--------------------|
 ```
 
-##### Monitor（锁）
-
 Monitor被称之为**监视器**或者**管程**，每个java对象都可以关联一个 monitor对象，如果使用synchronized给对象上锁（**重量级锁**）之后，
 
 该对象头中的mark word就被设置为指向**monitor对象的指针**
+
+**Monitor锁是由操作系统提供的，程序每次进入synchronized代码块都需要获取monitor锁，对程序的性能影响比较大**
 
 **monitor结构如下**
 
