--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1645,6 +1645,147 @@ public class Test21WaitNotify {
 
 #### Wait&Notify的正确姿势
 
+##### sleep (long n) & wait (long n) 区别
+
+1. sleep是Thread的方法，wait 是Object的方法
+2. sleep不需要强制和synchronized配合使用，但是wait必须和synchronized配合使用（只有持有锁的线程才可以调用wait方法，否则会抛异常）
+3. sleep在睡眠过程中不会释放对象锁，wait方法在等待过程中会释放锁
+4. 他们都是TIMED_WAITING状态
+
+##### step1
+
+**方案特点：**：线程在sleep睡眠时会一直持有锁
+
+```java
+@Slf4j(topic = "Test22CigaretteStep1")
+public class Test22CigaretteStep1 {
+
+    private static final Object room = new Object();
+    private static boolean hasCigarette = false;
+    private static boolean hasTakeout = false;
+
+    public static void main(String[] args) {
+        new Thread(() -> {
+            synchronized (room) {
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (!hasCigarette) {
+                    log.debug("没烟，先歇会！");
+                    try {
+                        TimeUnit.SECONDS.sleep(2);
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (hasCigarette) {
+                    log.debug("可以开始干活了");
+                }
+            }
+        }, "小南").start();
+
+        for (int i = 0; i < 5; i++) {
+            new Thread(() -> {
+                synchronized (room) {
+                    log.debug("可以开始干活了");
+                }
+            }, "其它人").start();
+        }
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        new Thread(() -> {
+            // 这里能不能加 synchronized (room)？
+            hasCigarette = true;
+            log.debug("烟到了噢！");
+        }, "送烟的").start();
+    }
+}
+```
+
+**该方案缺点：**
+
+1. 小南线程在睡眠时其他干活的线程会处于阻塞状态，效率太低
+
+2. 小南线程必须睡足两秒才能醒过来，就算烟提前送到，也不能立刻醒来
+
+3. 送烟线程也加了 synchronized (room) 之后就好比小南在里面反锁了们睡觉，送烟线程根本无法将送进来（小南线程代码块运行结束以后才可以改变送烟状态，这时候再送烟已经毫无意义）
+
+   送烟线程没有添加synchronized (room) 时，可以理解为时翻窗户进来送烟的（**非线程安全的**）
+
+**优化方案**
+
+使用wait - notify优化
+
+##### step2
+
+```java
+@Slf4j(topic = "Test22CigaretteStep1")
+public class Test22CigaretteStep2 {
+
+    private static final Object room = new Object();
+    private static boolean hasCigarette = false;
+    private static boolean hasTakeout = false;
+
+    public static void main(String[] args) {
+        new Thread(() -> {
+            synchronized (room) {
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (!hasCigarette) {
+                    log.debug("没烟，先歇会！");
+                    try {
+                        room.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (hasCigarette) {
+                    log.debug("可以开始干活了");
+                }
+            }
+        }, "小南").start();
+
+        for (int i = 0; i < 5; i++) {
+            new Thread(() -> {
+                synchronized (room) {
+                    log.debug("可以开始干活了");
+                }
+            }, "其它人").start();
+        }
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        new Thread(() -> {
+            // 这里能不能加 synchronized (room)？
+            synchronized (room) {
+                hasCigarette = true;
+                log.debug("烟到了噢！");
+                room.notify();
+            }
+        }, "送烟的").start();
+    }
+}
+
+17:15:26.362 [小南] DEBUG Test22CigaretteStep1 - 有烟没？[false]
+17:15:26.365 [小南] DEBUG Test22CigaretteStep1 - 没烟，先歇会！
+17:15:26.365 [其它人] DEBUG Test22CigaretteStep1 - 可以开始干活了
+17:15:26.366 [其它人] DEBUG Test22CigaretteStep1 - 可以开始干活了
+17:15:26.366 [其它人] DEBUG Test22CigaretteStep1 - 可以开始干活了
+17:15:26.366 [其它人] DEBUG Test22CigaretteStep1 - 可以开始干活了
+17:15:26.366 [其它人] DEBUG Test22CigaretteStep1 - 可以开始干活了
+17:15:27.362 [送烟的] DEBUG Test22CigaretteStep1 - 烟到了噢！
+17:15:27.362 [小南] DEBUG Test22CigaretteStep1 - 有烟没？[true]
+17:15:27.362 [小南] DEBUG Test22CigaretteStep1 - 可以开始干活了
+```
+
+
+
 #### Join原理
 
 #### Park&Unpark原理
@@ -1656,6 +1797,8 @@ public class Test21WaitNotify {
 #### 活跃性
 
 #### ReentrentLock
+
+
 
 
 
