涉及模块：并发编程-基础篇 提交说明：wait & notify的使用套路

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1721,6 +1721,8 @@ public class Test22CigaretteStep1 {
 
 ##### step2
 
+使用wait - notify优化
+
 ```java
 @Slf4j(topic = "Test22CigaretteStep1")
 public class Test22CigaretteStep2 {
@@ -1783,6 +1785,202 @@ public class Test22CigaretteStep2 {
 17:15:27.362 [小南] DEBUG Test22CigaretteStep1 - 有烟没？[true]
 17:15:27.362 [小南] DEBUG Test22CigaretteStep1 - 可以开始干活了
 ```
+
+##### wait - notify方案评价
+
+1. 解决其他可以干活线程阻塞问题（**优化性能**）
+2. **如果有其他线程也在等待唤醒呢？可能导致错误唤醒其他线程**
+
+##### step3
+
+使用notifyAll唤醒所有处于wait状态的线程
+
+```java
+@Slf4j(topic = "Test22CigaretteStep1")
+public class Test22CigaretteStep3 {
+
+    private static final Object room = new Object();
+    private static boolean hasCigarette = false;
+    private static boolean hasTakeout = false;
+
+    public static void main(String[] args) {
+        new Thread(() -> {
+            synchronized (room) {
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (!hasCigarette) {
+                    log.debug("没烟，先歇会！");
+                    try {
+                        room.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (hasCigarette) {
+                    log.debug("可以开始干活了");
+                } else {
+                    log.debug("没干成活...");
+                }
+            }
+        }, "小南").start();
+
+
+        new Thread(() -> {
+            synchronized (room) {
+                log.debug("外卖送到没？[{}]", hasTakeout);
+                if (!hasTakeout) {
+                    log.debug("没外卖，先歇会！");
+                    try {
+                        room.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.debug("外卖送到没？[{}]", hasTakeout);
+                if (hasTakeout) {
+                    log.debug("可以开始干活了");
+                } else {
+                    log.debug("没干成活...");
+                }
+            }
+        }, "小女").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        new Thread(() -> {
+            synchronized (room) {
+                hasTakeout = true;
+                log.debug("外卖到了噢！");
+                room.notifyAll();
+            }
+        }, "送外卖的").start();
+    }
+}
+```
+
+```java
+17:25:13.747 [小南] DEBUG Test22CigaretteStep1 - 有烟没？[false]
+17:25:13.750 [小南] DEBUG Test22CigaretteStep1 - 没烟，先歇会！
+17:25:13.751 [小女] DEBUG Test22CigaretteStep1 - 外卖送到没？[false]
+17:25:13.751 [小女] DEBUG Test22CigaretteStep1 - 没外卖，先歇会！
+17:25:14.745 [送外卖的] DEBUG Test22CigaretteStep1 - 外卖到了噢！
+17:25:14.745 [小南] DEBUG Test22CigaretteStep1 - 有烟没？[false]
+17:25:14.745 [小南] DEBUG Test22CigaretteStep1 - 没干成活...
+```
+
+**step3方案评价**
+
+1. 如果有多个处于等待状态的线程，那么这种方案可能会错误唤醒本来不应该被唤醒的线程，即**虚假唤醒**
+
+##### step4 
+
+使用**while循环**判断送烟/送饭状态，如果没有满足条件则工作线程直接**进入下一轮wait**
+
+```java
+@Slf4j(topic = "Test22CigaretteStep1")
+public class Test22CigaretteStep3 {
+
+    private static final Object room = new Object();
+    private static boolean hasCigarette = false;
+    private static boolean hasTakeout = false;
+
+    public static void main(String[] args) {
+        new Thread(() -> {
+            synchronized (room) {
+                log.debug("有烟没？[{}]", hasCigarette);
+                while (!hasCigarette) {
+                    log.debug("没烟，先歇会！");
+                    try {
+                        room.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.debug("有烟没？[{}]", hasCigarette);
+                if (hasCigarette) {
+                    log.debug("可以开始干活了");
+                } else {
+                    log.debug("没干成活...");
+                }
+            }
+        }, "小南").start();
+
+
+        new Thread(() -> {
+            synchronized (room) {
+                log.debug("外卖送到没？[{}]", hasTakeout);
+                while (!hasTakeout) {
+                    log.debug("没外卖，先歇会！");
+                    try {
+                        room.wait();
+                    } catch (InterruptedException e) {
+                        e.printStackTrace();
+                    }
+                }
+                log.debug("外卖送到没？[{}]", hasTakeout);
+                if (hasTakeout) {
+                    log.debug("可以开始干活了");
+                } else {
+                    log.debug("没干成活...");
+                }
+            }
+        }, "小女").start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+
+        new Thread(() -> {
+            synchronized (room) {
+                hasTakeout = true;
+                log.debug("外卖到了噢！");
+                room.notifyAll();
+            }
+        }, "送外卖的").start();
+    }
+}
+```
+
+```java
+17:36:01.376 [小南] DEBUG Test22CigaretteStep1 - 有烟没？[false]
+17:36:01.379 [小南] DEBUG Test22CigaretteStep1 - 没烟，先歇会！
+17:36:01.380 [小女] DEBUG Test22CigaretteStep1 - 外卖送到没？[false]
+17:36:01.380 [小女] DEBUG Test22CigaretteStep1 - 没外卖，先歇会！
+17:36:02.375 [送外卖的] DEBUG Test22CigaretteStep1 - 外卖到了噢！
+17:36:02.375 [小女] DEBUG Test22CigaretteStep1 - 外卖送到没？[true]
+17:36:02.375 [小女] DEBUG Test22CigaretteStep1 - 可以开始干活了
+17:36:02.376 [小南] DEBUG Test22CigaretteStep1 - 没烟，先歇会！
+```
+
+##### wait & notify的使用套路
+
+```java
+// 工作线程
+synchronized (lock) {
+    while (条件不成立) {
+        lock.wait();
+    }
+
+    // TODO 做条件成立的事情
+}
+
+// 其他线程（处理工作线程的判断条件）
+synchronized (lock) {
+    // 处理工作线程的条件
+    // 唤醒所有线程
+    lock.notifyAll();
+}
+```
+
+
+
+##### step5
 
 
 
