涉及模块：并发编程-基础篇 提交说明：同步模式之保护性暂停代码实现

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -91,5 +91,120 @@ java.lang.InterruptedException: sleep interrupted
 12:22:43.014 [Thread-0] INFO TwoPhaseTermination - 监控线程被打断，料理后事，正常退出...
 ```
 
+#### 同步模式之保护性暂停
+
+##### 定义
+
+保护性暂停即Guarded Suspension，一个线程等待另一个线程的执行结果
+
+**要点：**
+
+1. 有一个结果需要从一个线程传递到另一个线程，让它们关联同一个 GuardedObject
+2. 如果有结果不断地从一个线程传递到另外一个线程，可以使用消息队列实现（生产者/消费者模型）
+3. JDK中，join的实现、future的实现就是使用的这种模式
+4. 因为要等待另一个线程的执行结果，因此这种模式归类为**同步模式**
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/同步模式之保护性暂停.png" alt="同步模式之保护性暂停" style="zoom:67%;" />
 
 
+
+##### 实现
+
+```java
+@Slf4j(topic = "Test23GuardObject")
+public class Test23GuardObject {
+    public static void main(String[] args) {
+
+        GuardObject guardObject = new GuardObject();
+
+        new Thread(() -> {
+            log.info("等待结果");
+            List<String> result = (List<String>) guardObject.get();
+            log.info("结果长度：{}", result.size());
+        }).start();
+
+        new Thread(() -> {
+            try {
+                log.info("结算结果");
+                List<String> download = Downloader.download();
+                guardObject.complete(download);
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }).start();
+    }
+}
+
+class GuardObject {
+
+    // 结果
+    private Object response;
+
+    /**
+     * @return 获取结果
+     */
+    public Object get() {
+        synchronized (this) {
+            while (response == null) {
+                try {
+                    this.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            return this.response;
+        }
+    }
+
+    /**
+     * 写入结果
+     * @param response 数据
+     */
+    public void complete(Object response) {
+        synchronized (this) {
+            // 结果赋值
+            this.response = response;
+            // 通知所有等待的线程
+            this.notifyAll();
+        }
+    }
+}
+```
+
+```java
+public class Downloader {
+    public static List<String> download() throws IOException {
+        HttpURLConnection conn = (HttpURLConnection) new URL("https://www.baidu.com/").openConnection();
+        List<String> lines = new ArrayList<>();
+        try (BufferedReader reader =
+                     new BufferedReader(new InputStreamReader(conn.getInputStream(), StandardCharsets.UTF_8))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                lines.add(line);
+            }
+        }
+        try {
+            TimeUnit.SECONDS.sleep(5);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        return lines;
+    }
+}
+```
+
+```java
+09:52:37.347 [Thread-0] INFO Test23GuardObject - 等待结果
+09:52:37.347 [Thread-1] INFO Test23GuardObject - 获取结果
+09:52:43.127 [Thread-0] INFO Test23GuardObject - 结果长度：3
+```
+
+
+
+##### ❗**应用**
+
+##### 扩展1
+
+##### ❗**原理之**join
+
+##### 扩展2
