涉及模块：并发编程-基础篇 提交说明：超时等待获取结果

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -199,6 +199,39 @@ public class Downloader {
 09:52:43.127 [Thread-0] INFO Test23GuardObject - 结果长度：3
 ```
 
+**超时等待**
+
+```java
+    /**
+     * 超时获取结果
+     * @param timeout 最大超时时间
+     * @return 结果
+     */
+    public Object get(long timeout) {
+        synchronized (this) {
+            // 开始时间
+            long begin = System.currentTimeMillis();
+            // 经历的时间
+            long passedTime = 0L;
+            while (response == null) {
+                // 这一轮循环应该等待的时间
+                long waitTime = timeout - passedTime;
+                if(waitTime <= 0) {
+                    break;
+                }
+                try {
+                    this.wait(waitTime); // 注意考虑虚假唤醒的问题
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                // 这一轮循环实际消耗的时间
+                passedTime = System.currentTimeMillis() - begin;
+            }
+            return this.response;
+        }
+    }
+```
+
 
 
 ##### ❗**应用**
