--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -232,8 +232,6 @@ public class Downloader {
     }
 ```
 
-
-
 ##### ❗**应用**
 
 ##### 扩展1
@@ -241,3 +239,221 @@ public class Downloader {
 ##### ❗**原理之**join
 
 ##### 扩展2
+
+**Futures之生产者消费者模型**
+
+图中的Futures可以理解为居民楼中的信箱，每个信箱都对应着独立的房间编号，左侧的t0、t2、t4可以理解为等待收信的居民（**消费者线程**），t1、t3、t5可以理解为邮件投递员（**生产者线程**）
+
+如果需要在多个类之间传递GuardObject对象，GuardObject作为参数传递不是很方便，因此需要设计一个用来解耦的中间类，这样不仅可以**解耦生产者**和**消费者线程**，同时还支持**多个任务的管理**
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/Futures之生产者消费者模型.png" alt="Futures之生产者消费者模型" style="zoom:80%;" />
+
+新增 id 用来标识Mail类
+
+```java
+/**
+ * 邮件类
+ */
+class Mail {
+
+    /**
+     * 邮件id
+     */
+    private Integer mailId;
+
+    /**
+     * 结果
+     */
+    private Object response;
+
+    public Mail(Integer mailId) {
+        this.mailId = mailId;
+    }
+
+    public Integer getMailId() {
+        return mailId;
+    }
+
+    /**
+     * @return 获取结果
+     */
+    public Object get() {
+        synchronized (this) {
+            while (response == null) {
+                try {
+                    this.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            return this.response;
+        }
+    }
+
+    /**
+     * 超时获取结果
+     * @param timeout 最大超时时间
+     * @return 结果
+     */
+    public Object get(long timeout) {
+        synchronized (this) {
+            // 开始时间
+            long begin = System.currentTimeMillis();
+            // 经历的时间
+            long passedTime = 0L;
+            while (response == null) {
+                // 这一轮循环应该等待的时间
+                long waitTime = timeout - passedTime;
+                if(waitTime <= 0) {
+                    break;
+                }
+                try {
+                    this.wait(waitTime); // 注意考虑虚假唤醒的问题
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                // 这一轮循环实际消耗的时间
+                passedTime = System.currentTimeMillis() - begin;
+            }
+            return this.response;
+        }
+    }
+
+    /**
+     * 写入结果
+     * @param response 数据
+     */
+    public void complete(Object response) {
+        synchronized (this) {
+            // 结果赋值
+            this.response = response;
+            // 通知所有等待的线程
+            this.notifyAll();
+        }
+    }
+}
+```
+
+MailBox解耦类
+
+```java
+class MailBox {
+
+    private static Map<Integer, Mail> futures = new ConcurrentHashMap<>();
+
+    private static Integer id = 1;
+
+    /**
+     * @return 产生唯一id
+     */
+    private static synchronized Integer generateId() {
+        return id ++;
+    }
+
+    /**
+     * @param mailId 邮件id
+     * @return 获取邮件
+     */
+    public static Mail getMail(int mailId) {
+        return futures.remove(mailId);
+    }
+
+    // futures集合是线程安全的，所以此方法不需要考虑线程安全问题
+    public static Mail createMail() {
+        Mail mail = new Mail(generateId());
+        futures.put(mail.getMailId(), mail);
+        return mail;
+    }
+
+    // futures集合是线程安全的，所以此方法不需要考虑线程安全问题
+    public static Set<Integer> getIds () {
+        return futures.keySet();
+    }
+
+}
+```
+
+投递员线程
+
+```java
+/**
+ * 投递员线程
+ */
+@Slf4j(topic = "Postman")
+class Postman extends Thread {
+
+    private int id;
+    private String mailContent;
+
+    public Postman(int id, String mailContent) {
+        this.id = id;
+        this.mailContent = mailContent;
+    }
+
+    @Override
+    public void run() {
+        Mail mail = MailBox.getMail(id);
+        log.debug("送信 id: {}, 内容: {}", id, mailContent);
+        mail.complete(mailContent);
+    }
+}
+```
+
+居民线程
+
+```java
+/**
+ * 居民线程
+ */
+@Slf4j(topic = "People")
+class People extends Thread {
+
+    @Override
+    public void run() {
+        // 收信
+        Mail mail = MailBox.createMail();
+        log.debug("开始收信 id: {}", mail.getMailId());
+        Object content = mail.get(5000);
+        log.debug("收到信 id: {}, 内容: {}", mail.getMailId(), content);
+    }
+}
+```
+
+main线程启动类
+
+```java
+@Slf4j(topic = "Test23GuardObject")
+public class Test24GuardObject {
+    public static void main(String[] args) throws InterruptedException {
+        for (int i = 0; i < 3; i++) {
+            new People().start();
+        }
+
+        TimeUnit.SECONDS.sleep(1);
+        for (Integer mailId : MailBox.getIds()) {
+            new Postman(mailId, "内容" + mailId).start();
+        }
+    }
+}
+```
+
+执行结果日志
+
+```java
+14:24:11.877 [Thread-1] DEBUG People - 开始收信 id: 2
+14:24:11.877 [Thread-0] DEBUG People - 开始收信 id: 1
+14:24:11.877 [Thread-2] DEBUG People - 开始收信 id: 3
+14:24:12.877 [Thread-4] DEBUG Postman - 送信 id: 2, 内容: 内容2
+14:24:12.877 [Thread-5] DEBUG Postman - 送信 id: 3, 内容: 内容3
+14:24:12.877 [Thread-3] DEBUG Postman - 送信 id: 1, 内容: 内容1
+14:24:12.877 [Thread-2] DEBUG People - 收到信 id: 3, 内容: 内容3
+14:24:12.877 [Thread-1] DEBUG People - 收到信 id: 2, 内容: 内容2
+14:24:12.877 [Thread-0] DEBUG People - 收到信 id: 1, 内容: 内容1
+```
+
+执行结果分析
+
+之所以可以保证People 开始首先的id为1时，等待了投递员投递信件之后还可以收到id为1的信件，那是因为Mail类在获取信件/投递信件的锁对象是mail对象。
+
+**主线程创建了三个people，也即创建了三个线程、三个mail对象，三个线程加的是三把不同的锁对象**
+
