涉及模块：并发编程-模式篇 提交说明：生产者/消费者模型定义

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -236,11 +236,11 @@ public class Downloader {
 
 ##### 扩展1
 
-##### ❗**原理之**join
+##### ❗**原理之**oin
 
 ##### 扩展2
 
-**Futures之生产者消费者模型**
+**产生结果的线程和消费结果的线程是一一对应的**
 
 图中的Futures可以理解为居民楼中的信箱，每个信箱都对应着独立的房间编号，左侧的t0、t2、t4可以理解为等待收信的居民（**消费者线程**），t1、t3、t5可以理解为邮件投递员（**生产者线程**）
 
@@ -456,4 +456,18 @@ public class Test24GuardObject {
 之所以可以保证People 开始首先的id为1时，等待了投递员投递信件之后还可以收到id为1的信件，那是因为Mail类在获取信件/投递信件的锁对象是mail对象。
 
 **主线程创建了三个people，也即创建了三个线程、三个mail对象，三个线程加的是三把不同的锁对象**
+
+#### 异步模式之生产者/消费者模型
+
+##### 定义
+
+1. 与同步保护性暂停模式不同的是，异步模式之生产者/消费者模型不需要将生产结果和消费结果一一对应
+2. 消费队列可以用来平衡生产线程和消费线程的线程资源
+3. 生产线程只负责生产数据，不会关注数据该如何处理，而消费者线程只负责处理数据
+4. 消息队列的容量是有限的，当队列满时不会再加入数据，当队列为空时不会在消费数据
+5. JDK中的各种阻塞队列就是采用的这种模式
+
+##### 实现
+
+##### ❗❗应用
 
