涉及模块：并发编程-模式篇 提交说明：生产者/消费者模型代码实现

--- a/doc/Java并发编程/并发编程-模式篇.md
+++ b/doc/Java并发编程/并发编程-模式篇.md
@@ -467,7 +467,143 @@ public class Test24GuardObject {
 4. 消息队列的容量是有限的，当队列满时不会再加入数据，当队列为空时不会在消费数据
 5. JDK中的各种阻塞队列就是采用的这种模式
 
+##### 生产者/消费者模型
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/生产者消费者模型.5ke2vbrf7240.png" alt="生产者消费者模型" style="zoom:80%;" />
+
 ##### 实现
+
+Message消息类
+
+```java
+final class Message<T> {
+
+    private Integer id;
+
+    private T data;
+
+    public Integer getId() {
+        return id;
+    }
+
+    public T getData() {
+        return data;
+    }
+
+    public Message(Integer id, T data) {
+        this.id = id;
+        this.data = data;
+    }
+
+    public Message() {
+    }
+
+    @Override
+    public String toString() {
+        return "Message{" +
+                "id=" + id +
+                ", data=" + data +
+                '}';
+    }
+}
+```
+
+MQ消息队列
+
+```java
+/**
+ * 消息队列(线程之间通信使用)
+ */
+@Slf4j(topic = "MessageQueue")
+class MessageQueue<T> {
+
+    // 队列集合
+    private LinkedList<Message<T>> list = new LinkedList<>();
+    // 队列容量
+    private int capacity;
+
+    public MessageQueue(int capacity) {
+        this.capacity = capacity;
+    }
+
+    public Message<T> take() {
+        synchronized (list) {
+            while (list.isEmpty()) {
+                try {
+                    log.info("队列为空，消费者线程等待");
+                    list.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            // 从队列的头部获取消息并返回
+            Message<T> message = list.removeFirst();
+            list.notifyAll();
+            log.info("消费消息：{}", message);
+            return message;
+        }
+    }
+
+    public void put(Message<T> message) {
+        synchronized (list) {
+            // 检查队列容量是否已满
+            while (list.size() == capacity) {
+                try {
+                    log.info("队列已满，生产者线程等待");
+                    list.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            log.info("生产消息：{}", message);
+            // 将消息加入队列尾部
+            list.addLast(message);
+            list.notifyAll();
+        }
+    }
+}
+```
+
+主线程
+
+```javascript
+@Slf4j(topic = "Test25MQ")
+public class Test25MQ {
+    public static void main(String[] args) {
+        MessageQueue<String> messageQueue = new MessageQueue<>(2);
+        for (int i = 0; i < 3; i++) {
+            int id = i;
+            new Thread(() -> {
+                messageQueue.put(new Message<>(id, "消息" + id));
+            }, "生产者" + i).start();
+        }
+
+        new Thread(() -> {
+            while (true) {
+                try {
+                    TimeUnit.SECONDS.sleep(1);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                Message<String> message = messageQueue.take();
+            }
+        }).start();
+    }
+}
+```
+
+输出日志
+
+```java
+19:27:45.740 [生产者1] INFO MessageQueue - 生产消息：Message{id=1, data=消息1}
+19:27:45.746 [生产者2] INFO MessageQueue - 生产消息：Message{id=2, data=消息2}
+19:27:45.746 [生产者0] INFO MessageQueue - 队列已满，生产者线程等待
+19:27:46.738 [Thread-0] INFO MessageQueue - 消费消息：Message{id=1, data=消息1}
+19:27:46.738 [生产者0] INFO MessageQueue - 生产消息：Message{id=0, data=消息0}
+19:27:47.738 [Thread-0] INFO MessageQueue - 消费消息：Message{id=2, data=消息2}
+19:27:48.739 [Thread-0] INFO MessageQueue - 消费消息：Message{id=0, data=消息0}
+19:27:49.739 [Thread-0] INFO MessageQueue - 队列为空，消费者线程等待
+```
 
 ##### ❗❗应用
 
