涉及模块：并发编程-模式篇 提交说明：Park&Unpark特点

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -1978,15 +1978,109 @@ synchronized (lock) {
 }
 ```
 
-
-
-##### step5
-
-
-
 #### Join原理
 
 #### Park&Unpark原理
+
+##### 基本使用
+
+他们是LockSupport类中的方法
+
+```java
+// 暂停当前线程
+LockSupport.park()
+    
+// 恢复某个线程的运行
+LockSupport.unpark(暂停的线程对象)    
+```
+
+**先park再unpark**
+
+**处于park状态的线程本质上是处于WAIT状态的**
+
+```java
+@Slf4j(topic = "Test26Park")
+public class Test26Park {
+    public static void main(String[] args) {
+        Thread thread = new Thread(() -> {
+            log.info("start...");
+            try {
+                TimeUnit.SECONDS.sleep(1);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            log.info("park...");
+            LockSupport.park();
+            log.info("resume...");
+        });
+        thread.start();
+
+        try {
+            TimeUnit.SECONDS.sleep(2);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        log.info("unpark...");
+        LockSupport.unpark(thread);
+    }
+}
+```
+
+```java
+20:28:44.517 [Thread-0] INFO Test26Park - start...
+20:28:45.520 [Thread-0] INFO Test26Park - park...
+20:28:46.515 [main] INFO Test26Park - unpark...
+20:28:46.515 [Thread-0] INFO Test26Park - resume...
+```
+
+**先unpark再park**
+
+```java
+@Slf4j(topic = "Test26Park")
+public class Test26Park {
+    public static void main(String[] args) {
+        Thread thread = new Thread(() -> {
+            log.info("start...");
+            try {
+                TimeUnit.SECONDS.sleep(2);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            log.info("park...");
+            LockSupport.park();
+            log.info("resume...");
+        });
+        thread.start();
+
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        log.info("unpark...");
+        LockSupport.unpark(thread);
+    }
+}
+```
+
+```java
+20:38:27.604 [Thread-0] INFO Test26Park - start...
+20:38:28.603 [main] INFO Test26Park - unpark...
+20:38:29.608 [Thread-0] INFO Test26Park - park...
+20:38:29.608 [Thread-0] INFO Test26Park - resume...
+```
+
+通过线程的执行时间可知`unpark`即可以在`park`之前，也可以在`park`之后调用
+
+##### 特点
+
+`park`和`unpark`与Object中的`wait`、`notify`、`notifyAll`方法相比较
+
+1. wait、notify、notifyAll必须配合Object Monitor一起使用，然而unpark方法不用
+2. `park`和`unpark`是以**线程为单位**【阻塞】或者【唤醒】线程的，然而notify只能随机唤醒一个等待的线程，notifyAll可以唤醒所有线程（容易造成虚假唤醒的状况），并不是那么的精确
+3. `park`和`unpark`方法中可以先`unpark`，但是`wait`、`notify`不能先`notify`
+
+##### 原理之park & unpark
 
 #### 重新理解线程的状态转换
 
