--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2082,6 +2082,25 @@ public class Test26Park {
 
 ##### 原理之park & unpark
 
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/park.5hlcmynf0900.png" alt="park" style="zoom: 67%;" />
+
+每个线程都有自己的park对象，主要有三部分组成：_counter、_cond、_mutex
+
+1. 线程就像一个旅人，parker就像他随身携带的旅行包，_cond条件变量就好比背包中的帐篷，_counter就好比背包中的备用干粮（0：耗尽、1：充足）
+
+2. 调用park就是**判断**需不需要休息
+
+   1. 如果备用干粮耗尽，则线程钻进帐篷休息
+   2. 如果备用干粮充足，则不需要休息，继续执行
+
+3. 调用unpark，就好比**使**备用干粮充足
+
+   1. 如果这个时候线程在帐篷中，则叫醒他继续让他前行
+
+   2. 如果这个时候线程在执行中，那么该线程下次被调用park时，仅仅是消耗掉之前的备用干粮，不需要停留，继续前进
+
+      **因为背包的空间是有限的，多次调用unpark仅仅会补充一次备用干粮**
+
 #### 重新理解线程的状态转换
 
 #### 多把锁
