--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2103,11 +2103,127 @@ public class Test26Park {
 
 #### 重新理解线程的状态转换
 
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/重新理解线程状态.1w3h2pc2h4g0.png" alt="重新理解线程状态" style="zoom:67%;" />
+
+假设有线程 Thread t
+
+##### 情况1`NEW --> RUNNABLE`
+
+当调用 t.start() 方法时，由 NEW --> RUNNABLE
+
+##### 情况 2 `RUNNABLE <--> WAITING`
+
+**t 线程**用 `synchronized(obj)` 获取了对象锁后
+
+1. 调用 obj.wait() 方法时，t 线程从 RUNNABLE --> WAITING
+2. 调用 obj.notify() ， obj.notifyAll() ， t.interrupt() 时
+   1. 竞争锁成功，t 线程从 WAITING --> RUNNABLE
+   2. 竞争锁失败，t 线程从 WAITING --> BLOCKED
+
+```java
+@Slf4j(topic = "c.TestWaitNotify")
+public class Test27WaitNotify {
+    final static Object obj = new Object();
+
+    public static void main(String[] args) {
+
+        new Thread(() -> {
+            synchronized (obj) {
+                log.debug("执行....");
+                try {
+                    obj.wait(); // 让线程在obj上一直等待下去
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                log.debug("其它代码....");
+            }
+        },"t1").start();
+
+        new Thread(() -> {
+            synchronized (obj) {
+                log.debug("执行....");
+                try {
+                    obj.wait(); // 让线程在obj上一直等待下去
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                log.debug("其它代码....");
+            }
+        },"t2").start();
+
+        // 主线程两秒后执行
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+        log.debug("唤醒 obj 上其它线程");
+        synchronized (obj) {
+//            obj.notify(); // 唤醒obj上一个线程
+            obj.notifyAll(); // 唤醒obj上所有等待线程
+        }
+    }
+}
+```
+
+##### 情况 3 `RUNNABLE <--> WAITING`
+
+1. 当前线程调用 t.join() 方法时，当前线程从 RUNNABLE --> WAITING
+
+   注意是当前线程在t 线程对象的监视器上等待
+
+2. t 线程运行结束，或调用了当前线程的 interrupt() 时，当前线程从 WAITING --> RUNNABLE
+
+##### 情况 4 `RUNNABLE <--> WAITING`
+
+1. 当前线程调用 LockSupport.park() 方法会让当前线程从 RUNNABLE --> WAITING
+2. 调用 LockSupport.unpark(目标线程) 或调用了线程 的 interrupt() ，会让目标线程从 WAITING --> RUNNABLE
+
+##### 情况 5 `RUNNABLE <--> TIMED_WAITING`
+
+t 线程用 synchronized(obj) 获取了对象锁后
+
+1. 调用 obj.wait(long n) 方法时，t 线程从 RUNNABLE --> TIMED_WAITING
+2. t 线程等待时间超过了 n 毫秒，或调用 obj.notify() ， obj.notifyAll() ， t.interrupt() 时
+   1. 竞争锁成功，t 线程从 TIMED_WAITING --> RUNNABLE
+   2. 竞争锁失败，t 线程从 TIMED_WAITING --> BLOCKED
+
+##### 情况 6 `RUNNABLE <--> TIMED_WAITING`
+
+1. 当前线程调用 t.join(long n) 方法时，当前线程从 RUNNABLE --> TIMED_WAITING
+
+   注意是当前线程在t 线程对象的监视器上等待
+
+2. 当前线程等待时间超过了 n 毫秒，或t 线程运行结束，或调用了当前线程的 interrupt() 时，当前线程从 TIMED_WAITING --> RUNNABLE
+
+##### 情况 7 `RUNNABLE <--> TIMED_WAITING`
+
+1. 当前线程调用 Thread.sleep(long n) ，当前线程从 RUNNABLE --> TIMED_WAITING
+2. 当前线程睡眠时间超过了 n 毫秒，当前线程从 TIMED_WAITING --> RUNNABLE
+
+##### 情况 8 `RUNNABLE <--> TIMED_WAITING`
+
+1. 当前线程调用 LockSupport.parkNanos(long nanos) 或 LockSupport.parkUntil(long millis) 时，当前线 程从 RUNNABLE --> TIMED_WAITING
+2. 调用 LockSupport.unpark(目标线程) 或调用了线程 的 interrupt() ，或是等待超时，会让目标线程从 TIMED_WAITING--> RUNNABLE
+
+##### 情况 9 `RUNNABLE <--> BLOCKED`
+
+1. t 线程用 synchronized(obj) 获取了对象锁时如果竞争失败，从 RUNNABLE --> BLOCKED
+2. 持 obj 锁线程的同步代码块执行完毕，会唤醒该对象上所有 BLOCKED 的线程重新竞争，如果其中 t 线程竞争 成功，从 BLOCKED --> RUNNABLE ，其它失败的线程仍然 BLOCKED
+
+##### 情况 10 `RUNNABLE <--> TERMINATED`
+
+当前线程所有代码运行完毕，进入 TERMINATED
+
 #### 多把锁
 
 #### 活跃性
 
 #### ReentrentLock
+
+
+
+
 
 
 
