涉及模块：并发编程-模式篇 提交说明：多把锁

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2217,21 +2217,125 @@ t 线程用 synchronized(obj) 获取了对象锁后
 
 #### 多把锁
 
+**多把不相干的锁**
+
+一个大屋子可以两个功能：**睡觉功能**、**学习功能**，这两个功能是没有关系的
+
+现在小南想要学习，小女想要睡觉，但是只能用一件屋子的话（只能有一个对象锁），并发度是很低的
+
+##### 粗粒度锁
+
+```java
+@Slf4j(topic = "BigRoom")
+public class Test28BigRoom {
+    public static void main(String[] args) throws InterruptedException {
+        log.info("主线程开始执行....");
+        BigRoom bigRoom = new BigRoom();
+        Thread thread1 = new Thread(bigRoom::study, "小南");
+        Thread thread2 = new Thread(bigRoom::sleep, "小女");
+        thread1.start();
+        thread2.start();
+        thread1.join();
+        thread2.join();
+        log.info("主线程执行结束....");
+    }
+}
+
+@Slf4j(topic = "BigRoom")
+class BigRoom {
+    public void sleep() {
+        synchronized (this) {
+            log.debug("sleeping 2 小时");
+            try {
+                TimeUnit.SECONDS.sleep(2);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+    public void study() {
+        synchronized (this) {
+            log.debug("study 1 小时");
+            try {
+                TimeUnit.SECONDS.sleep(1);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+
+```
+
+```java
+09:40:09.201 [main] INFO BigRoom - 主线程开始执行....
+09:40:09.240 [小南] DEBUG BigRoom - study 1 小时
+09:40:10.240 [小女] DEBUG BigRoom - sleeping 2 小时
+09:40:12.242 [main] INFO BigRoom - 主线程执行结束....
+```
+
+##### 细粒度锁
+
+```java
+@Slf4j(topic = "BigRoom")
+public class Test29BigRoom {
+    public static void main(String[] args) throws InterruptedException {
+        log.info("主线程开始执行....");
+        TestRoom bigRoom = new TestRoom();
+        Thread thread1 = new Thread(bigRoom::study, "小南");
+        Thread thread2 = new Thread(bigRoom::sleep, "小女");
+        thread1.start();
+        thread2.start();
+        thread1.join();
+        thread2.join();
+        log.info("主线程执行结束....");
+    }
+}
+
+@Slf4j(topic = "BigRoom")
+class TestRoom {
+
+    private final Object studyLock = new Object();
+    private final Object sleepLock = new Object();
+
+    public void sleep() {
+        synchronized (sleepLock) {
+            log.debug("sleeping 2 小时");
+            try {
+                TimeUnit.SECONDS.sleep(2);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+    public void study() {
+        synchronized (studyLock) {
+            log.debug("study 1 小时");
+            try {
+                TimeUnit.SECONDS.sleep(1);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+}
+```
+
+```java
+09:48:57.487 [main] INFO BigRoom - 主线程开始执行....
+09:48:57.528 [小南] DEBUG BigRoom - study 1 小时
+09:48:57.528 [小女] DEBUG BigRoom - sleeping 2 小时
+09:48:59.529 [main] INFO BigRoom - 主线程执行结束...
+```
+
+将锁的粒度细分
+
+1. 好处：可以增强并发度
+2. 坏处：如果一个线程同事需要获得多把锁，很容易产生死锁
+
+
+
 #### 活跃性
 
 #### ReentrentLock
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
