涉及模块：并发编程-基础篇 提交说明：线程活跃性问题：死锁、活锁、饥饿

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2333,9 +2333,17 @@ class TestRoom {
 1. 好处：可以增强并发度
 2. 坏处：如果一个线程同事需要获得多把锁，很容易产生死锁
 
-
-
 #### 活跃性
+
+死锁
+
+定位死锁
+
+哲学家就餐问题
+
+活锁
+
+饥饿
 
 #### ReentrentLock
 
