涉及模块：并发编程-基础篇 提交说明：ReentrentLock

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -6,7 +6,7 @@ typora-root-url: imgs
 
 #### 进程和线程
 
-##### 进程
+#### 进程
 
 - 进程由`指令`和`数据`组成。一个进程的运行需要将指令加载进CPU、数据加载进内存。在进程运行过程中还需要用到磁盘、网络等设备。综上，进程是用来加载指令、管理内存、管理IO的程序集
 - 当一个程序运行时，从磁盘加载这个程序的代码至内存，这时也就开启了一个进程
@@ -2335,15 +2335,313 @@ class TestRoom {
 
 #### 活跃性
 
-死锁
+##### 死锁
 
-定位死锁
+产生死锁的原因：一个线程需要同时获得多把锁，这个时候就容易造成死锁（多个线程各自都持有一把锁，还想获取对方线程的锁）
 
-哲学家就餐问题
+`T1线程`获得`A对象的锁`之后，接下来想获得`B对象的锁`
 
-活锁
+`T2线程`获得`B对象`的锁之后，接下来想获得`A对象的锁`
 
-饥饿
+*最终彼此的代码都无法往下执行*
+
+##### 定位死锁
+
+##### `jps`查看Java进程信息
+
+```java
+D:\KUHAN Project\ops-monitor-backend>jps
+16340 Test30DeadLock
+4052 Jps
+7912
+2172 Launcher
+```
+
+##### `jstack`查看线程中的进程信息
+
+```java
+D:\KUHAN Project\ops-monitor-backend>jstack 4084
+
+Found one Java-level deadlock:
+=============================
+"T2":
+  waiting to lock monitor 0x000000001feb99c8 (object 0x000000076d2165c8, a java.lang.Object),
+  which is held by "T1"
+"T1":
+  waiting to lock monitor 0x000000001c625598 (object 0x000000076d2165d8, a java.lang.Object),
+  which is held by "T2"
+
+Java stack information for the threads listed above:
+===================================================
+"T2":
+        at com.kuhan.ops.monitor.system.Test30DeadLock.lambda$main$1(Test30DeadLock.java:41)
+        - waiting to lock <0x000000076d2165c8> (a java.lang.Object)
+        - locked <0x000000076d2165d8> (a java.lang.Object)
+        at com.kuhan.ops.monitor.system.Test30DeadLock$$Lambda$2/1123629720.run(Unknown Source)
+        at java.lang.Thread.run(Thread.java:748)
+"T1":
+        at com.kuhan.ops.monitor.system.Test30DeadLock.lambda$main$0(Test30DeadLock.java:27)
+        - waiting to lock <0x000000076d2165d8> (a java.lang.Object)
+        - locked <0x000000076d2165c8> (a java.lang.Object)
+        at com.kuhan.ops.monitor.system.Test30DeadLock$$Lambda$1/445288316.run(Unknown Source)
+        at java.lang.Thread.run(Thread.java:748)
+
+Found 1 deadlock.
+```
+
+`jconsole控制台`查看线程信息
+
+##### <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/jconsole.2qnplkpancy0.png" alt="jconsole" style="zoom:67%;" />哲学家就餐问题
+
+<img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/哲学及就餐问题.62wkz0i6leg0.png" alt="哲学及就餐问题" style="zoom: 67%;" />
+
+有五位哲学家，围坐在圆桌旁准备吃饭
+
+1. 他们只做两件事情：吃饭和思考，思考一会吃会饭，吃饭完之后接着思考
+2. 吃饭时要用两根筷子，但是桌子上只有五根筷子（每个哲学家左手右手边各有一根筷子）
+3. 如果其中的一根筷子被身边的人拿着，自己就需要等着
+
+筷子类
+
+```java
+class Chopstick {
+    private String name;
+
+    public Chopstick(String name) {
+        this.name = name;
+    }
+
+    @Override
+    public String toString() {
+        return "Chopstick{" +
+                "name='" + name + '\'' +
+                '}';
+    }
+}
+```
+
+哲学家类
+
+```java
+@Slf4j(topic = "Philosopher")
+class Philosopher extends Thread {
+    private Chopstick left;
+    private Chopstick right;
+
+    public Philosopher(String name, Chopstick left, Chopstick right) {
+        super(name);
+        this.left = left;
+        this.right = right;
+    }
+
+    private void eat() {
+        log.info("eat...");
+        try {
+            TimeUnit.SECONDS.sleep(1);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+    /**
+     * 吃饭
+     */
+    @Override
+    public void run() {
+        while (true) {
+            // 获得左手筷子
+            synchronized (left) {
+                // 获得右手筷子
+                synchronized (right) {
+                    // 获取两把锁之后开始吃饭
+                    eat();
+                }
+                // 放下右手筷子
+            }
+            // 放下左手筷子
+        }
+    }
+}
+```
+
+主线程
+
+```java
+public class Test31PhilosopherEat {
+    public static void main(String[] args) {
+        Chopstick c1 = new Chopstick("1");
+        Chopstick c2 = new Chopstick("2");
+        Chopstick c3 = new Chopstick("3");
+        Chopstick c4 = new Chopstick("4");
+        Chopstick c5 = new Chopstick("5");
+        new Philosopher("苏格拉底", c1, c2).start();
+        new Philosopher("柏拉图", c2, c3).start();
+        new Philosopher("亚里士多德", c3, c4).start();
+        new Philosopher("赫拉克利特", c4, c5).start();
+        new Philosopher("阿基米德", c5, c1).start();
+    }
+}
+```
+
+输出日志
+
+```java
+11:23:26.587 [亚里士多德] INFO Philosopher - eat...
+11:23:26.587 [苏格拉底] INFO Philosopher - eat...
+11:23:27.590 [亚里士多德] INFO Philosopher - eat...
+11:23:27.590 [苏格拉底] INFO Philosopher - eat...
+11:23:28.591 [亚里士多德] INFO Philosopher - eat...
+11:23:28.591 [苏格拉底] INFO Philosopher - eat...
+11:23:29.591 [亚里士多德] INFO Philosopher - eat...
+11:23:29.591 [阿基米德] INFO Philosopher - eat...
+11:23:30.591 [阿基米德] INFO Philosopher - eat...
+11:23:30.591 [亚里士多德] INFO Philosopher - eat...
+11:23:31.591 [亚里士多德] INFO Philosopher - eat...
+11:23:31.591 [阿基米德] INFO Philosopher - eat...
+11:23:32.592 [阿基米德] INFO Philosopher - eat...
+11:23:32.592 [亚里士多德] INFO Philosopher - eat...
+11:23:33.592 [亚里士多德] INFO Philosopher - eat...
+11:23:33.592 [阿基米德] INFO Philosopher - eat...
+11:23:34.593 [亚里士多德] INFO Philosopher - eat...
+11:23:35.593 [亚里士多德] INFO Philosopher - eat...
+11:23:36.593 [亚里士多德] INFO Philosopher - eat...
+11:23:37.593 [亚里士多德] INFO Philosopher - eat...
+```
+
+`jstack`查看死锁分析日志
+
+```java
+Found one Java-level deadlock:
+=============================
+"阿基米德":
+  waiting to lock monitor 0x000000001fa79f58 (object 0x000000076cb31208, a com.kuhan.ops.monitor.system.Chopstick)
+,
+  which is held by "苏格拉底"
+"苏格拉底":
+  waiting to lock monitor 0x000000001c305318 (object 0x000000076cb31248, a com.kuhan.ops.monitor.system.Chopstick)
+,
+  which is held by "柏拉图"
+"柏拉图":
+  waiting to lock monitor 0x000000001c305268 (object 0x000000076cb31288, a com.kuhan.ops.monitor.system.Chopstick)
+,
+  which is held by "亚里士多德"
+"亚里士多德":
+  waiting to lock monitor 0x000000001c305478 (object 0x000000076cb312c8, a com.kuhan.ops.monitor.system.Chopstick)
+,
+  which is held by "赫拉克利特"
+"赫拉克利特":
+  waiting to lock monitor 0x000000001fa7cd68 (object 0x000000076cb31308, a com.kuhan.ops.monitor.system.Chopstick)
+,
+  which is held by "阿基米德"
+
+Java stack information for the threads listed above:
+===================================================
+"阿基米德":
+        at com.kuhan.ops.monitor.system.Philosopher.run(Test31PhilosopherEat.java:59)
+        - waiting to lock <0x000000076cb31208> (a com.kuhan.ops.monitor.system.Chopstick)
+        - locked <0x000000076cb31308> (a com.kuhan.ops.monitor.system.Chopstick)
+"苏格拉底":
+        at com.kuhan.ops.monitor.system.Philosopher.run(Test31PhilosopherEat.java:59)
+        - waiting to lock <0x000000076cb31248> (a com.kuhan.ops.monitor.system.Chopstick)
+        - locked <0x000000076cb31208> (a com.kuhan.ops.monitor.system.Chopstick)
+"柏拉图":
+        at com.kuhan.ops.monitor.system.Philosopher.run(Test31PhilosopherEat.java:59)
+        - waiting to lock <0x000000076cb31288> (a com.kuhan.ops.monitor.system.Chopstick)
+        - locked <0x000000076cb31248> (a com.kuhan.ops.monitor.system.Chopstick)
+"亚里士多德":
+        at com.kuhan.ops.monitor.system.Philosopher.run(Test31PhilosopherEat.java:59)
+        - waiting to lock <0x000000076cb312c8> (a com.kuhan.ops.monitor.system.Chopstick)
+        - locked <0x000000076cb31288> (a com.kuhan.ops.monitor.system.Chopstick)
+"赫拉克利特":
+        at com.kuhan.ops.monitor.system.Philosopher.run(Test31PhilosopherEat.java:59)
+        - waiting to lock <0x000000076cb31308> (a com.kuhan.ops.monitor.system.Chopstick)
+        - locked <0x000000076cb312c8> (a com.kuhan.ops.monitor.system.Chopstick)
+
+Found 1 deadlock.
+
+```
+
+**如何解决哲学家就餐问题：使用ReentrentLock可重入锁可以实现**
+
+##### 活锁
+
+1. 活锁出现场景
+
+   两个线程互相改变对方的结束条件，导致最后谁也无法结束运行
+
+2. 活锁代码实现
+
+   ```java
+   @Slf4j(topic = "Test32LiveLock")
+   public class Test32LiveLock {
+       private static int counter = 10;
+   
+       public static void main(String[] args) {
+           new Thread(() -> {
+               while (counter > 0) {
+                   counter --;
+                   log.info("counter: {}", counter);
+                   try {
+                       TimeUnit.MILLISECONDS.sleep(500);
+                   } catch (InterruptedException e) {
+                       e.printStackTrace();
+                   }
+               }
+           }).start();
+           new Thread(() -> {
+               while (counter < 20) {
+                   counter ++;
+                   log.info("counter: {}", counter);
+                   try {
+                       TimeUnit.MILLISECONDS.sleep(500);
+                   } catch (InterruptedException e) {
+                       e.printStackTrace();
+                   }
+               }
+           }).start();
+       }
+   }
+   ```
+
+3. 如何避免活锁
+
+   给线程增加随机的睡眠时间
+
+##### 饥饿
+
+很多教程把饥饿定义为，一个线程的优先级太低， 始终得不到CPU调度执行，也不能够结束执行
+
+饥饿情况不易演示，讲解读写锁是会涉及到饥饿问题
+
+1. 下面演示的是使用**非顺序加锁**导致死锁的例子
+
+   非顺序加锁：线程1获取锁A，线程2获取锁B；接下来线程1尝试获取锁B，线程2尝试获取锁A。这种非顺序加锁的方式会导致死锁的情况发生
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/死锁线程模拟.719hjntsf0s0.png" alt="死锁线程模拟" style="zoom:67%;" />
+
+2. 下面演示的是采用顺序加锁的方式解决死锁的案例，但是同时会带来**线程饥饿**的问题
+
+   顺序加锁：线程1尝试获取锁A（成功），线程1再次尝试获取锁B（成功）；线程2尝试获取锁A（阻塞），线程2再次尝试获取锁B（阻塞）
+
+   <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/顺序加锁情况.134ch98gf3z4.png" alt="顺序加锁情况" style="zoom:67%;" />
 
 #### ReentrentLock
+
+相对于synchronized，它具备如下特点：
+
+1. 可中断
+2. 可以设置超时时间
+3. 可以设置为公平锁
+4. 可以支持多个条件变量
+5. 与synchronized一样，都可以支持锁重入
+
+##### 可重入锁
+
+可重入就是一个线程如果首次获取了这把锁，那么他就是这把锁的拥有者，因此有权利再次获得这把锁
+
+如果是不可重入锁，那么第二次再次获得这把锁时，自己也会被这把锁挡住
+
+
+
+
 
