涉及模块：并发编程-基础篇 提交说明：ReentrentLock代码实现

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2625,21 +2625,83 @@ Found 1 deadlock.
 
    <img src="https://cdn.jsdelivr.net/gh/Andre235/-community@master/顺序加锁情况.134ch98gf3z4.png" alt="顺序加锁情况" style="zoom:67%;" />
 
-#### ReentrentLock
+#### ReentrantLock
 
 相对于synchronized，它具备如下特点：
 
 1. 可中断
+
 2. 可以设置超时时间
+
+   规定时间内，如果获取不到锁，那么放弃竞争锁
+
 3. 可以设置为公平锁
+
+   大家排队等待CPU时间片，则先到先得
+
 4. 可以支持多个条件变量
+
+   支持多个WaitSet，不满足条件1的线程在WaitSet1集合里面等待，不满足条件2的线程在WaitSet2集合里面等待
+
 5. 与synchronized一样，都可以支持锁重入
+
+   对同一个对象，可以反复加锁
+
+##### 基本用法
+
+```java
+// 加锁
+reentrantLock.lock();
+try {
+    // 临界区代码
+} finally {
+    // 释放锁
+    reentrantLock.unlock();
+}
+```
 
 ##### 可重入锁
 
 可重入就是一个线程如果首次获取了这把锁，那么他就是这把锁的拥有者，因此有权利再次获得这把锁
 
 如果是不可重入锁，那么第二次再次获得这把锁时，自己也会被这把锁挡住
+
+```java
+@Slf4j(topic = "ReentrantLock")
+public class Test33ReentrantLock {
+
+    private final static ReentrantLock lock = new ReentrantLock();
+
+    public static void main(String[] args) {
+        lock.lock();
+        try {
+            log.info("execute main function...");
+            fun1();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private static void fun1() {
+        lock.lock();
+        try {
+            log.info("execute fun1 function...");
+            fun2();
+        } finally {
+            lock.unlock();
+        }
+    }
+
+    private static void fun2() {
+        lock.lock();
+        try {
+            log.info("execute fun2 function...");
+        } finally {
+            lock.unlock();
+        }
+    }
+}
+```
 
 
 
