涉及模块：并发编程-基础篇 提交说明：可打断锁定义、应用场景、代码实现

--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2703,6 +2703,59 @@ public class Test33ReentrantLock {
 }
 ```
 
+##### 可打断锁
+
+1. 定义
+
+   没有线程1没有竞争，此方法就会获取lock对象锁； 如果有竞争则线程1进入阻塞队列，同时可以被其他线程用interrupt方法去打断阻塞状态
+
+2. 应用场景
+
+   可打断锁在被打断以后，线程直接运行结束(防止线程无限制地阻塞等待下去)
+
+3. 代码实现
+
+   ```java
+   @Slf4j(topic = "InterruptLock")
+   public class Test33InterruptLock {
+   
+       private final static ReentrantLock lock = new ReentrantLock();
+   
+       public static void main(String[] args) throws InterruptedException {
+           Thread thread = new Thread(() -> {
+               try {
+                   log.info("尝试获得锁");
+                   // 一个可以被打断的锁
+                   // 如果没有竞争，此方法就会获取lock对象锁
+                   // 如果有竞争则进入阻塞队列，同时可以被其他线程用interrupt方法去打断阻塞状态，该线程执行结束(反之线程无限制地等待下去)
+                   lock.lockInterruptibly();
+               } catch (InterruptedException e) {
+                   log.error("没有获得锁，被其他线程打断，返回");
+                   e.printStackTrace();
+                   return;
+               }
+   
+               try {
+                   log.info("获取到锁");
+               } finally {
+                   lock.unlock();
+               }
+   
+           }, "T1");
+   
+           // 主线程先加锁，T1线程这个时候会阻塞住
+           lock.lock();
+           thread.start();
+   
+           TimeUnit.SECONDS.sleep(1);
+           log.info("主线程打断T1线程，程序运行结束...");
+           thread.interrupt();
+       }
+   }
+   ```
+
+   
+
 
 
 
