--- a/doc/Java并发编程/并发编程-基础篇.md
+++ b/doc/Java并发编程/并发编程-基础篇.md
@@ -2754,7 +2754,288 @@ public class Test33ReentrantLock {
    }
    ```
 
+   ##### 锁超时
+
+   1. 超时锁定义
+
+      在给定的时间范围内尝试获取锁，**获取不到则线程运行结束**
+
+   2. 思想
+
+      避免线程无限制地获取锁，**防止线程死锁**
    
+   3. 代码实现
+   
+      ```java
+      @Slf4j(topic = "TryLock")
+      public class Test34TryLock {
+          private final static ReentrantLock lock = new ReentrantLock();
+      
+          public static void main(String[] args) {
+              Thread thread = new Thread(() -> {
+                  // 尝试获取锁
+                  try {
+                      if(!lock.tryLock(3, TimeUnit.SECONDS)) {
+                          log.info("尝试获取锁失败，线程运行结束...");
+                          return;
+                      }
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                      log.info("尝试获取锁失败，线程运行结束...");
+                      return;
+                  }
+                  try{
+                      log.info("获取到锁，执行临界区代码...");
+                  } finally {
+                      lock.unlock();
+                  }
+              });
+              log.info("主线程获取锁....");
+              lock.lock();
+              thread.start();
+          }
+      }
+      ```
+   
+   4. 解决哲学家就餐问题
+   
+      核心代码
+   
+      ```java
+      class Chopstick1 extends ReentrantLock {
+          private String name;
+      
+          public Chopstick1(String name) {
+              this.name = name;
+          }
+      
+          @Override
+          public String toString() {
+              return "Chopstick{" +
+                      "name='" + name + '\'' +
+                      '}';
+          }
+      }
+      ```
+   
+      ```java
+          /**
+           * 吃饭
+           */
+          @Override
+          public void run() {
+              while (true) {
+                  // 获得左手筷子
+                  if (left.tryLock()) {
+                      try {
+                          // 获得右手筷子
+                          if (right.tryLock()) {
+                              try {
+                                  eat();
+                              } finally {
+                                  right.unlock();
+                              }
+                          }
+                      } finally {
+                          // 如果右手筷子获取失败，则会放弃现在手中的左手筷子
+                          left.unlock();
+                      }
+                  }
+              }
+          }
+      ```
+   
+      所有代码
+   
+      ```java
+      public class Test35PhilosopherEat {
+          public static void main(String[] args) {
+              Chopstick1 c1 = new Chopstick1("1");
+              Chopstick1 c2 = new Chopstick1("2");
+              Chopstick1 c3 = new Chopstick1("3");
+              Chopstick1 c4 = new Chopstick1("4");
+              Chopstick1 c5 = new Chopstick1("5");
+              new Philosopher1("苏格拉底", c1, c2).start();
+              new Philosopher1("柏拉图", c2, c3).start();
+              new Philosopher1("亚里士多德", c3, c4).start();
+              new Philosopher1("赫拉克利特", c4, c5).start();
+              new Philosopher1("阿基米德", c5, c1).start();
+          }
+      }
+      
+      
+      @Slf4j(topic = "Philosopher")
+      class Philosopher1 extends Thread {
+          private Chopstick1 left;
+          private Chopstick1 right;
+      
+          public Philosopher1(String name, Chopstick1 left, Chopstick1 right) {
+              super(name);
+              this.left = left;
+              this.right = right;
+          }
+      
+          private void eat() {
+              log.info("eat...");
+              try {
+                  TimeUnit.SECONDS.sleep(1);
+              } catch (InterruptedException e) {
+                  e.printStackTrace();
+              }
+          }
+      
+          /**
+           * 吃饭
+           */
+          @Override
+          public void run() {
+              while (true) {
+                  // 获得左手筷子
+                  if (left.tryLock()) {
+                      try {
+                          // 获得右手筷子
+                          if (right.tryLock()) {
+                              try {
+                                  eat();
+                              } finally {
+                                  right.unlock();
+                              }
+                          }
+                      } finally {
+                          // 如果右手筷子获取失败，则会放弃现在手中的左手筷子
+                          left.unlock();
+                      }
+                  }
+              }
+          }
+      }
+      
+      
+      class Chopstick1 extends ReentrantLock {
+          private String name;
+      
+          public Chopstick1(String name) {
+              this.name = name;
+          }
+      
+          @Override
+          public String toString() {
+              return "Chopstick{" +
+                      "name='" + name + '\'' +
+                      '}';
+          }
+      }
+      ```
+   
+   ##### 公平锁
+   
+   ReentrantLock 默认是不公平的
+   
+   ##### 条件变量
+   
+   1. synchronized条件变和ReentrantLock 的条件变量区别
+   
+      ReentrantLock 的条件变量相比较于synchronized条件变量最大的区别在于，**它支持多个条件变量**。可以理解为synchronized中那些条件不满足的线程都在一个休息室休息；然而ReentrantLock 支持多间休息室，有专门的等烟休息室，专门的等外卖的休息室。在唤醒线程的时候也是按照**休息室为单位**进行唤醒的
+   
+   2. ReentrantLock 的条件变量使用方法
+   
+      1. 在使用await方法之前需要先获得锁
+      2. await方法执行之后会释放锁，进入Condition休息室等待
+      3. await线程被唤醒/打断/超时会重新竞争lock锁
+      4. 竞争lock锁成功之后，会从await之后继续执行
+   
+   3. 条件变量使用场景
+   
+      **使用await、signal方法可以实现多个线程之间的调度**
+   
+   4. 代码实现
+   
+      ```java
+      @Slf4j(topic = "AwaitSignal")
+      public class Test36AwaitSignal {
+      
+          private static ReentrantLock lock = new ReentrantLock();
+          private static Condition cigaretteWaitSet = lock.newCondition();
+          private static Condition takeoutWaitSet = lock.newCondition();
+          private static boolean hasCigarette = false;
+          private static boolean hasTakeout = false;
+      
+          public static void main(String[] args) throws InterruptedException {
+              new Thread(() -> {
+                  lock.lock();
+                  try {
+                      log.info("烟送到没有:{}", hasCigarette);
+                      while (!hasCigarette) {
+                          log.info("没有烟，休息一下");
+                          cigaretteWaitSet.await();
+                      }
+                      log.info("等到烟了，开始工作");
+                  } catch (Exception e) {
+                      e.printStackTrace();
+                  } finally {
+                      lock.unlock();
+                  }
+              }, "小南").start();
+      
+              new Thread(() -> {
+                  lock.lock();
+                  try {
+                      log.info("外卖送到没有:{}", hasTakeout);
+                      while (!hasTakeout) {
+                          log.info("没有外卖，休息一下");
+                          takeoutWaitSet.await();
+                      }
+                      log.info("等到外卖了，开始工作");
+                  } catch (InterruptedException e) {
+                      e.printStackTrace();
+                  } finally {
+                      lock.unlock();
+                  }
+              }, "小女").start();
+      
+              TimeUnit.SECONDS.sleep(1);
+              new Thread(() -> {
+                  lock.lock();
+                  try {
+                      log.info("烟送到了...");
+                      hasCigarette = true;
+                      cigaretteWaitSet.signal();
+                  } finally {
+                      lock.unlock();
+                  }
+              }, "送烟的").start();
+      
+              TimeUnit.SECONDS.sleep(1);
+              new Thread(() -> {
+                  lock.lock();
+                  try {
+                      log.info("外卖送到了...");
+                      hasTakeout = true;
+                      takeoutWaitSet.signal();
+                  } finally {
+                      lock.unlock();
+                  }
+              }, "送外卖的").start();
+          }
+      }
+      ```
+   
+      ```java
+      11:07:51.277 [小南] INFO AwaitSignal - 烟送到没有:false
+      11:07:51.282 [小南] INFO AwaitSignal - 没有烟，休息一下
+      11:07:51.282 [小女] INFO AwaitSignal - 外卖送到没有:false
+      11:07:51.282 [小女] INFO AwaitSignal - 没有外卖，休息一下
+      11:07:52.276 [送烟的] INFO AwaitSignal - 烟送到了...
+      11:07:52.276 [小南] INFO AwaitSignal - 等到烟了，开始工作
+      11:07:53.278 [送外卖的] INFO AwaitSignal - 外卖送到了...
+      11:07:53.278 [小女] INFO AwaitSignal - 等到外卖了，开始工作
+      ```
+   
+      
+   
+   ##### 同步模式之顺序控制
+   
+   #### 本章小节
 
 
 
